# EchoRead

./: README.md  UNIT_TEST_OUTLINE.md
echoread/: README.md  docker-compose.yml
echoread/api_server/: .placeholder  Dockerfile  README.md  alembic.ini  database.py  dev.env  gunicorn_conf.py  main.py  models.py  pyproject.toml
echoread/api_server/alembic/: env.py
echoread/api_server/alembic/versions/: 1b81127b90e0_add_audio_and_play_tables_and_relations.py  7f78b849831c_create_initial_tables.py
echoread/api_server/routers/: auth.py  books.py  plays.py  users.py
echoread/api_server/tests/: test_api.py
echoread/mobile_app/: .placeholder
